#2 - Create unit tests and integration tests using Spring Test and JUnit 5
a) Created:
1. (PessoaControllerIT.java) - Criando os testes de integração para testar o 'orphanRemoval = true'
2. (AbstractAssertsSpringBootDataRestTest.java, AbstractSpringBootDataRestTest.java) - Criando classes de abstração para os testes de integração

b) Added:
1. (data-postgresql.sql) - Adicionando 'pessoas', 'treinos' e 'treinos_exercicios'
2. (pom.xml) - Adicionando as bibliotecas necessárias para teste e também a 'spring-boot-starter-actuator' para servir de apoio

c) Fix:
1. (PessoaServiceImpl.java) - Removendo imports não usados
2. (cenario_teste.txt) - Ajustando o cenário de exclusão da 'pessoa 1'

--- a/maven/template/settings_template.xml
+++ b/maven/template/settings_template.xml
@@ -16,7 +16,7 @@
         </profile>
 
         <profile>
-            <id>Database-H2</id>
+            <id>Database-H2</id> <!-- REVIEW - Verificar se o H2 está funcionando! -->
             <properties>
                 <database.profile.active>h2</database.profile.active>
                 <database.user>h2</database.user>
