Melhoria no settings_template, flexibilizando mais algumas configurações
a) Parametrizações no template:
- spring.jpa.hibernate.ddl-auto
- spring.datasource.initialization-mode

b) Configuração nova:
- spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults

--- a/maven/template/settings_template.xml
+++ b/maven/template/settings_template.xml
@@ -12,6 +12,8 @@
             <id>General-Profile</id>
             <properties>
                 <app.port.usuario>8080</app.port.usuario>
+                <spring.jpa.hibernate.ddl-auto>none</spring.jpa.hibernate.ddl-auto>
+                <spring.datasource.initialization-mode>NEVER</spring.datasource.initialization-mode>
             </properties>
         </profile>
 
